<resources>
    <string name="app_name">Mijn HoGent</string>
    <string name="err_internal">Interne Fout</string>
    <string name="err_internal_description">Er is een interne fout opgetreden.</string>

    <string name="err_wrongcredentials">Gegevens Onjuist</string>
    <string name="err_wrongcredentials_description">Je gebruikersnaam en/of wachtwoord zijn fout. Probeer het opnieuw.</string>

    <string name="err_creatingsession">Verbindingsfout</string>
    <string name="err_creatingsession_description">Er kon geen Chamilo-sessie aangemaakt worden. Controleer je internetverbinding.</string>

    <string name="err_notloggedin">Niet ingelogd</string>
    <string name="err_notloggedin_description">Je bent niet aangemeld. Meld je aan om door te gaan..</string>

    <string name="today">Vandaag</string>
    <string name="lessons">Lessenrooster</string>
    <string name="exams">Examenrooster</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Aanmelden</string>
    <string name="prompt_email">E-Mail HoGent</string>
    <string name="prompt_password">Wachtwoord</string>
    <string name="action_sign_in">Aanmelden</string>
    <string name="action_sign_in_short">Aanmelden</string>
    <string name="error_invalid_email">Het e-mailadres is ongeldig.</string>
    <string name="error_invalid_password">Het wachtwoord is ongeldig.</string>
    <string name="error_incorrect_password">Wachtwoord onjuist.</string>
    <string name="error_field_required">Gelieve dit veld in te vullen.</string>
    <string name="title_activity_nav_drawer">Mijn Hogent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Instellingen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="logout">Afmelden</string>
    <string name="menu_other">Andere</string>
    <string name="menu_rosters">Lessenrooster</string>
    <string name="menu_assignments">Opdrachten</string>
    <string name="menu_documents">Documenten</string>
    <string name="assignment_title">Opdracht:</string>
    <string name="assignment_description">Beschrijving:</string>
    <string name="deadline">Deadline:</string>
    <string name="menu_summary">Overzicht</string>
    <string name="menu_announcements">Aankondigingen</string>
    <string name="menu_account">Account</string>
    <string name="menu_courses">Cursussen</string>
    <string name="my_courses">Mijn Cursussen</string>
    <string name="total_credits">Totaal aantal studiepunten:</string>
    <string name="title_activity_course">Cursus</string>
    <string name="course_tab_text_1">Info</string>
    <string name="course_tab_text_2">Aankondigingen</string>
    <string name="course_tab_text_3">Opdrachten</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="course_nodescription">Er is geen beschrijving voor dit opleidingsonderdeel.</string>
    <string name="course_titular">Titularis:</string>
    <string name="course_creditcount">Aantal Studiepunten:</string>
    <string name="course_edu">Opleiding:</string>
    <string name="course_code">Cursuscode:</string>

</resources>
