<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rosters"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_rosters"
            android:checked="true"/>
        <item
            android:id="@+id/nav_assignments"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_assignments" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_documents" />
    </group>

    <item android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
